Seeing if overflow-x: auto fixes things

--- a/css/base.css
+++ b/css/base.css
@@ -69,6 +69,7 @@ html, body {
     z-index: 100;
     padding-bottom: 15px;
     text-align: center;
+    overflow-x: auto;
 }
 
 #footer {
